# wall-free-15-puzzle

./: .gitignore  CMakeLists.txt  README.md
Programa/: hash_figure.py  run.sh  table.csv  verify_sols.py
Programa/hash/: 3x3_0.txt  3x3_1.txt  3x3_2.txt  3x3_3.txt  3x3_4.txt  3x3_5.txt  4x4_0.txt  4x4_1.txt  4x4_2.txt  4x4_3.txt  4x4_4.txt  4x4_5.txt  lun_0.txt  lun_1.txt  lun_2.txt  lun_3.txt  lun_4.txt  lun_5.txt
Programa/output/: 3x3_2.txt  3x3_3.txt  3x3_4.txt  3x3_5.txt  4x4_3.txt  4x4_5.txt  lun_1.txt  lun_4.txt  lun_5.txt
Programa/src/solver/: hashtable.c  hashtable.h  main.c  puzzle.c  puzzle.h  queue.c  queue.h  state.c  state.h  utils.c  utils.h
Programa/tests/data/: hash0.txt
Programa/tests/solutions/: 3x3_2.txt  3x3_3.txt  3x3_4.txt  3x3_5.txt  4x4_4.txt  lun_0.txt  lun_2.txt  lun_3.txt  lun_5.txt
Programa/tests/solver/: test_hashtable.c  test_puzzle.c  test_queue.c  test_state.c
